deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filesync-api
  namespace: default
spec:
  selector:
    app: filesync
    component: api
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  type: ClusterIP
