deploy/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filesync-web
spec:
  selector:
    app: filesync
    component: web
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  type: ClusterIP
